refactor: замена на stream.toList()